<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="63dp">

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="SevenBtn"
                android:text="@string/Seven"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="HeightBtn"
                android:text="@string/height"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="NineBtn"
                android:text="@string/Nine"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:onClick="AddBtn"
                android:text="@string/Addition"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="FourBtn"
                android:text="@string/Four"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="FiveBtn"
                android:text="@string/Five"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="SixBtn"
                android:text="@string/Six"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:onClick="MoinBtn"
                android:text="@string/Soustraction"
                android:textColor="@color/white"
                android:layout_margin="4dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="OneBtn"
                android:text="@string/One"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="TwooBtn"
                android:text="@string/Two"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="ThreeBtn"
                android:text="@string/Three"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:onClick="DivisionBtn"
                android:text="@string/Division"
                android:textColor="@color/white"
                android:layout_margin="4dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="Clear"
                android:text="@string/Clear"
                android:textColor="@color/black" />

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="ZeroBtn"
                android:text="@string/Zero"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:backgroundTint="@color/black"
                android:onClick="EqualBtn"
                android:text="@string/Equal"
                android:textColor="@color/white"
                android:layout_margin="4dp"/>

            <Button

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:onClick="MultiplicationBtn"
                android:text="@string/Multiplication"
                android:textColor="@color/white"
                android:layout_margin="4dp"/>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/zone_calcul"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="148dp"
        android:inputType="none"
        android:text="@string/Calcul"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>